...
            val existe = usuarioDao.obtenerUsuario(usuario)
            if (existe != null) {
                // Para volver al hilo principal usamos Main explícitamente o dejamos que Compose lo maneje
                withContext(Dispatchers.Main) { errorDialogoAlta = "El ID de usuario ya existe" }
            } else {
                usuarioDao.registrarUsuario(
                    Usuario(
                        nombreCompleto = nombre,
                        usuario = usuario,
                        contrasena = pass,
                        telefono = tlf,
                        rol = rolACrear
                    )
...
